--- a/sass/layout/navbar.scss
+++ b/sass/layout/navbar.scss
@@ -6,7 +6,12 @@
                     overflow: hidden;
                     align-items: center;
                     justify-items: center;
-                    visibility: hidden;
+                    @media only screen and (max-width: 425px) {
+                        & {
+                            display: none;
+                            visibility: hidden;
+                        }
+                    }
                     &-search-box {
                         width: 24.2%;
                         height: 5rem;
@@ -53,6 +58,11 @@
                                         margin-left: 2rem;
                                     }
                                 }
+                                @media only screen and (max-width:700px) {
+                                    & {
+                                        margin-left: 2.7rem;
+                                    }
+                                }
                                 &::placeholder {
                                     color: #A7B1AC;
                                     font-family: 'Roboto', sans-serif;
@@ -94,6 +104,16 @@
                                             left: 6.3rem;
                                         }
                                     }
+                                    @media only screen and (max-width:650px) {
+                                        & {
+                                            margin-left: 0.6rem;
+                                        }
+                                    }
+                                    @media only screen and (max-width:650px) {
+                                        & {
+                                            margin-left: 0.2rem;
+                                        }
+                                    }
                                      :hover {
                                         cursor: pointer;
                                     }
@@ -133,6 +153,16 @@
                     @media only screen and (max-width:700px) {
                         & {
                             margin-left: 3rem;
+                        }
+                    }
+                    @media only screen and (max-width:550px) {
+                        & {
+                            margin-left: -1rem;
+                        }
+                    }
+                    @media only screen and (max-width:450px) {
+                        & {
+                            width: 33.7rem;
                         }
                     }
                     &-con {
@@ -234,6 +264,11 @@
                             margin-left: 8rem;
                         }
                     }
+                    @media only screen and (max-width:650px) {
+                        & {
+                            display: none;
+                        }
+                    }
                     &--profile {
                         border-radius: 50%;
                         background-color: #3a3b3c;
@@ -249,6 +284,11 @@
                         align-content: center;
                         justify-content: center;
                         margin-top: 0.5rem;
+                        @media only screen and (max-width: 700px) {
+                            & {
+                                margin-left: 0.5rem;
+                            }
+                        }
                         &--icon {
                             fill: #E4E6EB;
                             width: 2rem;
@@ -273,6 +313,11 @@
                         align-content: center;
                         justify-content: center;
                         margin-top: 0.5rem;
+                        @media only screen and (max-width: 700px) {
+                            & {
+                                margin-left: 0.5rem;
+                            }
+                        }
                         &--icon {
                             fill: #E4E6EB;
                             width: 2rem;
@@ -297,6 +342,11 @@
                         align-content: center;
                         justify-content: center;
                         margin-top: 0.5rem;
+                        @media only screen and (max-width: 700px) {
+                            & {
+                                margin-left: 0.5rem;
+                            }
+                        }
                         &--icon {
                             fill: #E4E6EB;
                             width: 2rem;
@@ -321,6 +371,9 @@
                         align-content: center;
                         justify-content: center;
                         margin-top: 0.5rem;
+                        @media only screen and (max-width: 700px) {
+                            & {}
+                        }
                         &--icon {
                             fill: #E4E6EB;
                             width: 2rem;
