--- a/sass/mobile/res-navbar.scss
+++ b/sass/mobile/res-navbar.scss
@@ -1,14 +1,23 @@
 .nav-responsive {
     width: 100vw;
-    height: 13vh;
+    height: 14vh;
     background-color: #242526;
     display: grid;
     grid-template-rows: repeat(2, 50%);
     grid-template-columns: 100%;
+    visibility: hidden;
+    display: none;
+    @media only screen and (max-width: 425px) {
+        & {
+            display: grid;
+            visibility: visible;
+        }
+    }
     &--icon-con {
         display: grid;
         grid-template-rows: 100%;
         grid-template-columns: repeat(6, 16.6%);
+        margin-bottom: 0.5rem;
         &--icon-box {
             display: flex;
             align-items: flex-end;
@@ -43,6 +52,16 @@
             align-content: center;
             justify-content: center;
             margin-left: 0rem;
+            @media only screen and (max-width: 350px) {
+                & {
+                    margin-left: 0.5rem;
+                }
+            }
+            @media only screen and (max-width:300px) {
+                & {
+                    margin-left: 0.4rem;
+                }
+            }
             &--icon {
                 fill: #fff;
             }
@@ -63,6 +82,11 @@
             align-content: center;
             justify-content: center;
             margin-left: 0.5rem;
+            @media only screen and (max-width: 300px) {
+                & {
+                    margin-left: 0rem;
+                }
+            }
             &--icon {
                 fill: #fff;
             }
@@ -70,6 +94,12 @@
         &--logo {
             width: 16rem;
             height: 5rem;
+            @media only screen and (max-width: 350px) {
+                & {
+                    width: 13rem;
+                    height: 4rem;
+                }
+            }
         }
     }
 }
