--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,3 +6,4 @@
 @import"function/function.scss";
 @import"mobile/res-navbar.scss";
 @import"mobile/res-extra.scss";
+@import"./layout/backbone.scss";
