--- a/css/style.css
+++ b/css/style.css
@@ -1662,7 +1662,29 @@ body {
 .backbone {
   width: 100vw;
   height: 91.5vh;
-  background-color: red;
   display: grid;
   grid-template-rows: 100%;
   grid-template-columns: 22% 56% 22%; }
+
+.sidebar-con {
+  width: 100%;
+  height: 100%;
+  background-color: goldenrod;
+  grid-row: 1 / 2;
+  grid-column: 1 / 2; }
+  .sidebar-con--flex {
+    display: flex;
+    align-items: center;
+    justify-items: center;
+    align-content: center;
+    justify-content: center;
+    flex-direction: column; }
+    .sidebar-con--flex--box {
+      width: 100%;
+      height: 4.5rem;
+      background-color: red;
+      display: flex;
+      align-items: center;
+      justify-items: center;
+      align-content: center;
+      justify-content: center; }
