--- a/css/style.css
+++ b/css/style.css
@@ -1552,6 +1552,16 @@ body {
 .link {
   color: #2e89ff !important; }
 
+.top-prefixer-sidebar {
+  margin-top: 1.5rem !important; }
+
+.border-round {
+  border-radius: 50% !important;
+  -webkit-border-radius: 50% !important;
+  -moz-border-radius: 50% !important;
+  -ms-border-radius: 50% !important;
+  -o-border-radius: 50% !important; }
+
 @keyframes shimmer {
   0% {
     background-position: -450px 0; }
@@ -1669,7 +1679,6 @@ body {
 .sidebar-con {
   width: 100%;
   height: 100%;
-  background-color: goldenrod;
   grid-row: 1 / 2;
   grid-column: 1 / 2; }
   .sidebar-con--flex {
@@ -1679,12 +1688,42 @@ body {
     align-content: center;
     justify-content: center;
     flex-direction: column; }
+    .sidebar-con--flex:not(:first-child) {
+      margin-top: 0 !important; }
     .sidebar-con--flex--box {
+      margin-left: 0.5rem;
+      margin-top: 0.5rem;
+      border-radius: 1rem;
       width: 100%;
       height: 4.5rem;
-      background-color: red;
       display: flex;
       align-items: center;
       justify-items: center;
       align-content: center;
-      justify-content: center; }
+      -webkit-border-radius: 1rem;
+      -moz-border-radius: 1rem;
+      -ms-border-radius: 1rem;
+      -o-border-radius: 1rem;
+      grid-gap: 0.3rem;
+      transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+      -webkit-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+      -moz-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+      -ms-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+      -o-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1); }
+      .sidebar-con--flex--box:hover {
+        background-color: rgba(77, 79, 80, 0.5);
+        transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+        -webkit-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+        -moz-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+        -ms-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+        -o-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1); }
+      .sidebar-con--flex--box--img {
+        width: 3.1rem;
+        height: 3.1rem;
+        margin-left: 1.5rem; }
+        .sidebar-con--flex--box--img--name {
+          font-family: 'Roboto', sans-serif;
+          margin-left: 0.4rem;
+          font-size: 1.4rem;
+          color: #E4E6EB;
+          font-weight: bolder; }
