--- a/sass/layout/sidebar.scss
+++ b/sass/layout/sidebar.scss
@@ -1,7 +1,6 @@
 .sidebar-con {
     width: 100%;
     height: 100%;
-    background-color: goldenrod;
     grid-row: 1 / 2;
     grid-column: 1 / 2;
     &--flex {
@@ -11,15 +10,49 @@
         align-content: center;
         justify-content: center;
         flex-direction: column;
+        &:not(:first-child) {
+            margin-top: 0 !important;
+        }
         &--box {
+            margin-left: 0.5rem;
+            margin-top: 0.5rem;
+            border-radius: 1rem;
             width: 100%;
             height: 4.5rem;
-            background-color: red;
             display: flex;
             align-items: center;
             justify-items: center;
             align-content: center;
-            justify-content: center;
+            -webkit-border-radius: 1rem;
+            -moz-border-radius: 1rem;
+            -ms-border-radius: 1rem;
+            -o-border-radius: 1rem;
+            grid-gap: 0.3rem;
+            transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+            -webkit-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+            -moz-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+            -ms-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+            -o-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+            &:hover {
+                background-color: rgba(77, 79, 80, 0.5);
+                transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+                -webkit-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+                -moz-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+                -ms-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+                -o-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+            }
+            &--img {
+                width: 3.1rem;
+                height: 3.1rem;
+                margin-left: 1.5rem;
+                &--name {
+                    font-family: 'Roboto', sans-serif;
+                    margin-left: 0.4rem;
+                    font-size: 1.4rem;
+                    color: #E4E6EB;
+                    font-weight: bolder;
+                }
+            }
         }
     }
 }
