--- a/sass/extra/extra.scss
+++ b/sass/extra/extra.scss
@@ -58,3 +58,10 @@
     -ms-border-radius: 50% !important;
     -o-border-radius: 50% !important;
 }
+
+.small-arrrow {
+    width: 1.7rem !important;
+    height: 1.7rem !important;
+    position: absolute;
+    left: 0.5rem;
+}
