--- a/sass/extra/extra.scss
+++ b/sass/extra/extra.scss
@@ -69,8 +69,9 @@
 .small-arrrow {
     width: 1.7rem !important;
     height: 1.7rem !important;
-    position: absolute;
-    left: 0.5rem;
+    left: -0.8rem;
+    top: 0.1rem;
+    position: relative;
 }
 
 .icon-left-prefixer {
