--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,3 +9,5 @@
 @import"layout/backbone.scss";
 @import"layout/sidebar.scss";
 @import"layout/activebar.scss";
+@import"layout/socialsection.scss";
+@import"components/story.scss";
