--- a/css/style.css
+++ b/css/style.css
@@ -1556,8 +1556,9 @@ body {
 .small-arrrow {
   width: 1.7rem !important;
   height: 1.7rem !important;
-  position: absolute;
-  left: 0.5rem; }
+  left: -0.8rem;
+  top: 0.1rem;
+  position: relative; }
 
 .icon-left-prefixer {
   margin-left: 2.5rem; }
@@ -1821,7 +1822,7 @@ body {
   .active-con--flex-con {
     margin-top: -1.5rem;
     width: 100%;
-    height: 100%;
+    height: 93.9%;
     overflow: scroll;
     overflow-x: hidden;
     /* Chrome, Edge, and Safari */ }
@@ -1910,3 +1911,50 @@ body {
               margin-top: 2.2rem;
               margin-left: -11rem;
               background-color: rgba(0, 100, 0, 0.863); }
+
+.main-con {
+  width: 100%;
+  height: 100%;
+  grid-row: 1 / 2;
+  grid-column: 2 / 3;
+  overflow: scroll;
+  overflow-x: hidden;
+  /* Chrome, Edge, and Safari */ }
+  .main-con {
+    scrollbar-width: auto;
+    scrollbar-color: transparent transparent; }
+  .main-con::-webkit-scrollbar {
+    width: 0px; }
+  .main-con::-webkit-scrollbar-track {
+    background: transparent; }
+  .main-con::-webkit-scrollbar-thumb {
+    background-color: transparent;
+    border-radius: 0px;
+    border: 0px solid transparent;
+    -webkit-border-radius: 0px;
+    -moz-border-radius: 0px;
+    -ms-border-radius: 0px;
+    -o-border-radius: 0px; }
+
+.main-con--story-con {
+  width: 100%;
+  height: 45%;
+  border: 1px solid red; }
+  .main-con--story-con--grid {
+    width: 81.4%;
+    height: 77%;
+    margin-left: 8rem;
+    margin-top: 2.7rem;
+    display: grid;
+    grid-template-rows: 100%;
+    grid-template-columns: repeat(5, 18%);
+    grid-gap: 1rem; }
+    .main-con--story-con--grid--box {
+      width: 100%;
+      height: 100%;
+      background-color: #242526;
+      border-radius: 0.8rem;
+      -webkit-border-radius: 0.8rem;
+      -moz-border-radius: 0.8rem;
+      -ms-border-radius: 0.8rem;
+      -o-border-radius: 0.8rem; }
