--- a/sass/layout/activebar.scss
+++ b/sass/layout/activebar.scss
@@ -126,6 +126,7 @@
                         font-family: 'Roboto', sans-serif;
                         margin-left: 0.4rem;
                         font-size: 1.4rem;
+                        font-family: 'Roboto', sans-serif;
                         color: #E4E6EB;
                         font-weight: bolder;
                         &--live {
