--- a/sass/components/story.scss
+++ b/sass/components/story.scss
@@ -12,14 +12,112 @@
         grid-template-columns: repeat(5, 18%);
         grid-gap: 1rem;
         &--box {
+            text-align: center;
+            overflow: hidden;
             width: 100%;
             height: 100%;
             background-color: #242526;
-            border-radius: 0.8rem;
-            -webkit-border-radius: 0.8rem;
-            -moz-border-radius: 0.8rem;
-            -ms-border-radius: 0.8rem;
-            -o-border-radius: 0.8rem;
+            border-radius: 1rem;
+            -webkit-border-radius: 1rem;
+            -moz-border-radius: 1rem;
+            -ms-border-radius: 1rem;
+            -o-border-radius: 1rem;
+            &--img {
+                width: 100%;
+                height: 75%;
+                object-fit: cover;
+                transform: scale(1.0);
+                transition: all 2s cubic-bezier(0.075, 0.82, 0.165, 1);
+                -webkit-transition: all 2s cubic-bezier(0.075, 0.82, 0.165, 1);
+                -moz-transition: all 2s cubic-bezier(0.075, 0.82, 0.165, 1);
+                -ms-transition: all 2s cubic-bezier(0.075, 0.82, 0.165, 1);
+                -o-transition: all 2s cubic-bezier(0.075, 0.82, 0.165, 1);
+                -webkit-transform: scale(1.0);
+                -moz-transform: scale(1.0);
+                -ms-transform: scale(1.0);
+                -o-transform: scale(1.0);
+                &:hover {
+                    transform: scale(1.1);
+                    transition: all 2s cubic-bezier(0.075, 0.82, 0.165, 1);
+                    -webkit-transition: all 2s cubic-bezier(0.075, 0.82, 0.165, 1);
+                    -moz-transition: all 2s cubic-bezier(0.075, 0.82, 0.165, 1);
+                    -ms-transition: all 2s cubic-bezier(0.075, 0.82, 0.165, 1);
+                    -o-transition: all 2s cubic-bezier(0.075, 0.82, 0.165, 1);
+                    -webkit-transform: scale(1.1);
+                    -moz-transform: scale(1.1);
+                    -ms-transform: scale(1.1);
+                    -o-transform: scale(1.1);
+                }
+                &--plus-circle {
+                    width: 3.2rem;
+                    height: 3.2rem;
+                    border-radius: 50%;
+                    -webkit-border-radius: 50%;
+                    -moz-border-radius: 50%;
+                    -ms-border-radius: 50%;
+                    -o-border-radius: 50%;
+                    background-color: #2e89ff;
+                    display: flex;
+                    align-items: center;
+                    justify-items: center;
+                    align-content: center;
+                    justify-content: center;
+                    margin-left: 3.5rem;
+                    margin-top: -2rem;
+                    position: absolute;
+                    outline: 4px solid #242526;
+                    &--icon {
+                        color: white;
+                        &--name {
+                            margin-top: 2rem;
+                            font-size: 1.2rem;
+                            font-family: 'Roboto', sans-serif;
+                            color: #E4E6EB;
+                            font-weight: bold;
+                        }
+                    }
+                }
+            }
+        }
+        &--normal-box {
+            text-align: center;
+            overflow: hidden;
+            width: 100%;
+            height: 100%;
+            background-color: #242526;
+            border-radius: 1rem;
+            -webkit-border-radius: 1rem;
+            -moz-border-radius: 1rem;
+            -ms-border-radius: 1rem;
+            -o-border-radius: 1rem;
+            &--img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+            &--profile-circle {
+                margin-top: -5rem;
+                position: absolute;
+                z-index: 1000;
+                border: 3px solid #2e89ff;
+                width: 4.5rem;
+                height: 4.5rem;
+                border-radius: 50%;
+                -webkit-border-radius: 50%;
+                -moz-border-radius: 50%;
+                -ms-border-radius: 50%;
+                -o-border-radius: 50%;
+                &--img {
+                    width: 3.9rem;
+                    height: 3.9rem;
+                    border-radius: 50%;
+                    -webkit-border-radius: 50%;
+                    -moz-border-radius: 50%;
+                    -ms-border-radius: 50%;
+                    -o-border-radius: 50%;
+                    object-fit: cover;
+                }
+            }
         }
     }
 }
