--- a/css/style.css
+++ b/css/style.css
@@ -1563,11 +1563,32 @@ body {
 .icon-left-prefixer {
   margin-left: 2.5rem; }
 
+.Color-change {
+  border-width: 5px !important;
+  width: 4.5rem !important;
+  height: 4.5rem !important;
+  border-color: blue;
+  animation: color-change 2s linear 2s infinite alternate;
+  transition: all 2s cubic-bezier(0.075, 0.82, 0.165, 1);
+  -webkit-transition: all 2s cubic-bezier(0.075, 0.82, 0.165, 1);
+  -moz-transition: all 2s cubic-bezier(0.075, 0.82, 0.165, 1);
+  -ms-transition: all 2s cubic-bezier(0.075, 0.82, 0.165, 1);
+  -o-transition: all 2s cubic-bezier(0.075, 0.82, 0.165, 1);
+  -webkit-animation: color-change 2s linear 2s infinite alternate; }
+
+@keyframes color-change {
+  0% {
+    border-color: #f4d419; }
+  50% {
+    background-color: #2374e1; }
+  100% {
+    background-color: #f4d419; } }
+
 @keyframes shimmer {
   0% {
-    background-position: -450px 0; }
+    background-position: -550px 0; }
   100% {
-    background-position: 450px 0; } }
+    background-position: 550px 0; } }
 
 #open1:checked ~ .menu-con {
   visibility: visible; }
@@ -1943,7 +1964,7 @@ body {
   border: 1px solid red; }
   .main-con--story-con--grid {
     width: 81.4%;
-    height: 77%;
+    height: 80%;
     margin-left: 8rem;
     margin-top: 2.7rem;
     display: grid;
@@ -2013,7 +2034,7 @@ body {
               color: #E4E6EB;
               font-weight: bold; }
     .main-con--story-con--grid--normal-box {
-      text-align: center;
+      text-align: center !important;
       overflow: hidden;
       width: 100%;
       height: 100%;
@@ -2026,25 +2047,123 @@ body {
       .main-con--story-con--grid--normal-box--img {
         width: 100%;
         height: 100%;
-        object-fit: cover; }
+        object-fit: cover;
+        transform: scale(1);
+        transition: all 2s cubic-bezier(0.075, 0.82, 0.165, 1);
+        -webkit-transition: all 2s cubic-bezier(0.075, 0.82, 0.165, 1);
+        -moz-transition: all 2s cubic-bezier(0.075, 0.82, 0.165, 1);
+        -ms-transition: all 2s cubic-bezier(0.075, 0.82, 0.165, 1);
+        -o-transition: all 2s cubic-bezier(0.075, 0.82, 0.165, 1);
+        -webkit-transform: scale(1);
+        -moz-transform: scale(1);
+        -ms-transform: scale(1);
+        -o-transform: scale(1); }
+        .main-con--story-con--grid--normal-box--img:hover {
+          transform: scale(1.1);
+          transition: all 2s cubic-bezier(0.075, 0.82, 0.165, 1);
+          -webkit-transition: all 2s cubic-bezier(0.075, 0.82, 0.165, 1);
+          -moz-transition: all 2s cubic-bezier(0.075, 0.82, 0.165, 1);
+          -ms-transition: all 2s cubic-bezier(0.075, 0.82, 0.165, 1);
+          -o-transition: all 2s cubic-bezier(0.075, 0.82, 0.165, 1);
+          -webkit-transform: scale(1.1);
+          -moz-transform: scale(1.1);
+          -ms-transform: scale(1.1);
+          -o-transform: scale(1.1); }
       .main-con--story-con--grid--normal-box--profile-circle {
-        margin-top: -5rem;
+        margin-top: -19rem;
+        margin-left: 1rem;
         position: absolute;
         z-index: 1000;
         border: 3px solid #2e89ff;
-        width: 4.5rem;
-        height: 4.5rem;
+        width: 3.7rem;
+        height: 3.7rem;
         border-radius: 50%;
         -webkit-border-radius: 50%;
         -moz-border-radius: 50%;
         -ms-border-radius: 50%;
         -o-border-radius: 50%; }
         .main-con--story-con--grid--normal-box--profile-circle--img {
-          width: 3.9rem;
-          height: 3.9rem;
+          width: 100%;
+          height: 100%;
           border-radius: 50%;
           -webkit-border-radius: 50%;
           -moz-border-radius: 50%;
           -ms-border-radius: 50%;
           -o-border-radius: 50%;
           object-fit: cover; }
+          .main-con--story-con--grid--normal-box--profile-circle--img--name {
+            display: flex;
+            align-self: center;
+            justify-self: center;
+            font-size: 1.2rem;
+            font-family: 'Roboto', sans-serif;
+            color: #E4E6EB;
+            font-weight: bolder;
+            position: absolute;
+            margin-top: -2.8rem;
+            margin-left: 2.8rem; }
+      .main-con--story-con--grid--normal-box--loader-con {
+        overflow: hidden;
+        width: 110%;
+        height: 100%;
+        background-color: #242526;
+        border-radius: 1rem;
+        -webkit-border-radius: 1rem;
+        -moz-border-radius: 1rem;
+        -ms-border-radius: 1rem;
+        -o-border-radius: 1rem;
+        background-color: rgba(255, 255, 255, 0.1);
+        display: flex;
+        align-items: center;
+        justify-items: center; }
+        .main-con--story-con--grid--normal-box--loader-con--header {
+          display: flex;
+          justify-content: center;
+          align-content: center;
+          align-items: center;
+          justify-items: center; }
+          .main-con--story-con--grid--normal-box--loader-con--header--img {
+            height: 45px;
+            width: 45px;
+            background: #656871;
+            border-radius: 50%;
+            position: absolute;
+            overflow: hidden;
+            display: block;
+            margin-top: -13rem;
+            margin-left: 6rem; }
+            .main-con--story-con--grid--normal-box--loader-con--header--img:before {
+              -webkit-border-radius: 50%;
+              -moz-border-radius: 50%;
+              -ms-border-radius: 50%;
+              -o-border-radius: 50%;
+              -webkit-border-radius: 50%;
+              -moz-border-radius: 50%;
+              -ms-border-radius: 50%;
+              -o-border-radius: 50%;
+              position: absolute;
+              content: "";
+              height: 100%;
+              width: 100%;
+              background-image: linear-gradient(to right, #656871 0%, #888b94 20%, #656871 40%, #656871 100%);
+              background-repeat: no-repeat;
+              background-size: 450px 400px;
+              animation: shimmer 4s linear infinite;
+              background-size: 800px 600px;
+              -webkit-animation: shimmer 4s linear infinite; }
+      .main-con--story-con--grid--normal-box--arrow-circle {
+        width: 4rem;
+        height: 4rem;
+        background-color: #3E4042;
+        border-radius: 50%;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        -ms-border-radius: 50%;
+        -o-border-radius: 50%;
+        position: absolute;
+        right: 26%;
+        margin-top: 8rem; }
+        .main-con--story-con--grid--normal-box--arrow-circle--icon {
+          margin-top: 0.9rem;
+          margin-left: 1rem;
+          fill: #B0B3B8; }
