start from 2 part of mnd section

--- a/css/style.css
+++ b/css/style.css
@@ -1578,10 +1578,13 @@ body {
 
 @keyframes color-change {
   0% {
-    border-color: #f4d419; }
+    border-color: #f4d419;
+    margin-left: 1rem; }
   50% {
+    margin-left: 5rem;
     background-color: #2374e1; }
   100% {
+    margin-left: 1rem;
     background-color: #f4d419; } }
 
 @keyframes shimmer {
@@ -1960,8 +1963,7 @@ body {
 
 .main-con--story-con {
   width: 100%;
-  height: 45%;
-  border: 1px solid red; }
+  height: 45%; }
   .main-con--story-con--grid {
     width: 81.4%;
     height: 80%;
@@ -2161,9 +2163,67 @@ body {
         -ms-border-radius: 50%;
         -o-border-radius: 50%;
         position: absolute;
-        right: 26%;
-        margin-top: 8rem; }
+        margin-top: 8rem;
+        margin-left: 59rem; }
         .main-con--story-con--grid--normal-box--arrow-circle--icon {
           margin-top: 0.9rem;
           margin-left: 1rem;
           fill: #B0B3B8; }
+
+.main-con--mind-section {
+  width: 67%;
+  height: 21%;
+  background-color: #242526;
+  position: relative;
+  margin-left: 4rem;
+  border-radius: 8px;
+  -webkit-border-radius: 8px;
+  margin-left: 12rem;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
+  margin-top: -2rem; }
+  .main-con--mind-section--grid {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: repeat(2, 50%); }
+    .main-con--mind-section--grid--search-con {
+      width: 100%;
+      height: 100%;
+      display: grid;
+      grid-template-rows: 100%;
+      grid-template-columns: 15% 75%; }
+      .main-con--mind-section--grid--search-con--img {
+        width: 4rem;
+        height: 4rem;
+        border-radius: 50%;
+        margin-left: 2rem;
+        margin-top: 1rem;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        -ms-border-radius: 50%;
+        -o-border-radius: 50%; }
+        .main-con--mind-section--grid--search-con--img--search-box {
+          margin-left: -1rem;
+          background-color: #3A3B3C;
+          height: 4rem;
+          width: 41rem;
+          outline: none;
+          border: none;
+          border-radius: 25px;
+          -webkit-border-radius: 25px;
+          -moz-border-radius: 25px;
+          -ms-border-radius: 25px;
+          -o-border-radius: 25px;
+          padding: 2rem;
+          padding-left: 1.5rem;
+          color: #E4E6EB;
+          font-size: 1.7rem;
+          margin-top: 1rem; }
+          .main-con--mind-section--grid--search-con--img--search-box::placeholder {
+            font-size: 1.7rem;
+            color: #B0B3B8;
+            font-family: 'Roboto', sans-serif;
+            font-weight: bold; }
