--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,3 +11,4 @@
 @import"layout/activebar.scss";
 @import"layout/socialsection.scss";
 @import"components/story.scss";
+@import"components/mind.scss";
