--- a/sass/components/story.scss
+++ b/sass/components/story.scss
@@ -1,7 +1,6 @@
 .main-con--story-con {
     width: 100%;
     height: 45%;
-    border: 1px solid red;
     &--grid {
         width: 81.4%;
         height: 80%;
@@ -216,8 +215,8 @@
                 -ms-border-radius: 50%;
                 -o-border-radius: 50%;
                 position: absolute;
-                right: 26%;
                 margin-top: 8rem;
+                margin-left: 59rem;
                 &--icon {
                     margin-top: 0.9rem;
                     margin-left: 1rem;
