--- a/sass/components/story.scss
+++ b/sass/components/story.scss
@@ -63,12 +63,12 @@
                     justify-content: center;
                     margin-left: 3.5rem;
                     margin-top: -2rem;
-                    position: absolute;
+                    position: relative;
                     outline: 4px solid #242526;
                     &--icon {
                         color: white;
                         &--name {
-                            margin-top: 2rem;
+                            margin-top: 1rem;
                             font-size: 1.2rem;
                             font-family: 'Roboto', sans-serif;
                             color: #E4E6EB;
@@ -119,7 +119,7 @@
             &--profile-circle {
                 margin-top: -19rem;
                 margin-left: 1rem;
-                position: absolute;
+                position: relative;
                 z-index: 1000;
                 border: 3px solid #2e89ff;
                 width: 3.7rem;
@@ -146,8 +146,8 @@
                         font-family: 'Roboto', sans-serif;
                         color: #E4E6EB;
                         font-weight: bolder;
-                        position: absolute;
-                        margin-top: -2.8rem;
+                        position: relative;
+                        margin-top: 12rem;
                         margin-left: 2.8rem;
                     }
                 }
@@ -177,11 +177,11 @@
                         width: 45px;
                         background: #656871;
                         border-radius: 50%;
-                        position: absolute;
+                        position: relative;
                         overflow: hidden;
                         display: block;
                         margin-top: -13rem;
-                        margin-left: 6rem;
+                        margin-left: 1rem;
                         &:before {
                             -webkit-border-radius: 50%;
                             -moz-border-radius: 50%;
@@ -191,7 +191,7 @@
                             -moz-border-radius: 50%;
                             -ms-border-radius: 50%;
                             -o-border-radius: 50%;
-                            position: absolute;
+                            position: relative;
                             content: "";
                             height: 100%;
                             width: 100%;
@@ -214,8 +214,7 @@
                 -moz-border-radius: 50%;
                 -ms-border-radius: 50%;
                 -o-border-radius: 50%;
-                position: absolute;
-                margin-top: 8rem;
+                margin-top: -13rem;
                 margin-left: 59rem;
                 &--icon {
                     margin-top: 0.9rem;
