--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,3 +12,5 @@
 @import"layout/socialsection.scss";
 @import"components/story.scss";
 @import"components/mind.scss";
+@import"components/activeline.scss";
+@import"components/postsection.scss";
